# delta-hedging-black-scholes

./: .gitignore  Delta_Hedging_Analysis.ipynb  README.md  pyproject.toml  requirements.txt
_audit/: .gitignore  audit_quality.md  claims.csv  coherence.md  diff_summary.txt  final_report.md  findings_candidates.md  findings_confirmed.md  findings_rejected.md  inventory.md  pass_1.md
notebooks/: Delta_Hedging_Analysis.ipynb  _build_notebook.py
report/: delta_hedging_report.md  delta_hedging_report.tex
src/deltahedge/: __init__.py  analysis.py  black_scholes.py  hedging.py  paths.py  plotting.py
tests/: test_black_scholes.py  test_hedging.py  test_regression.py  test_reproducibility.py
